syntax = "proto3";

package product;

option go_package = "./proto;product";

service Product {
	rpc AddProduct(Request_ProductInfo)returns(Response_Product);
	rpc DelProduct(Request_ProductID)returns(Response_DelProduct);
	rpc ChangeProduct(Request_ProductInfo)returns(Response_Product);//考虑状态变更
	rpc FindProductByID(Request_ProductID)returns(Response_ProductInfo);
	rpc FindProductByRFID(Request_ProductRFID)returns(Response_ProductInfo);
	rpc FindProductByName(Request_ProductName)returns(Response_ProductInfos);
	rpc FindProductByArea(Request_ProductArea)returns(Response_ProductInfos);
	rpc FindProductByCustom(Request_ProductCustom)returns(Response_ProductInfos);
	rpc FindProductByCategory(Request_ProductCategory)returns(Response_ProductInfos);
	rpc FindAll(Request_Null)returns(Response_ProductInfos);
}
message Request_ProductName{
	string name = 1;
}
message Request_ProductArea{
	int64 aid = 1;
}
message Request_ProductCustom{
	int64 wid = 1;
}
message Request_ProductCategory{
	int64 cid = 1;
}
message Request_Null{}
message Request_ProductInfo{
	int64 id = 1;
	string product_name = 2;
	string product_description = 3;
	int64 product_level = 4;
	int64 product_belong_category = 5;
	bool is_important = 6;
	bool product_is = 7;
	int64 product_belong_custom = 8;
	int64 product_belong_area = 9;//物品所在库房id
	string product_location = 10;//物品最新位置,如果在库则不做记录
	string product_rfid = 11;//rfid特征码
	int64 image_id = 12;
}
message Response_ProductInfo{
	int64 id = 1;
	string product_name = 2;
	string product_description = 3;
	int64 product_level = 4;
	int64 product_belong_category = 5;
	bool is_important = 6;
	bool product_is = 7;
	int64 product_belong_custom = 8;
	int64 product_belong_area = 9;//物品所在库房id
	string product_location = 10;//物品最新位置,如果在库则不做记录
	string product_rfid = 11;//rfid特征码
	int64 image_id = 12;
	string three_url = 13;
}
message Request_ProductRFID{
	string rfid = 1;
}
message Response_Product{
	string message = 1;
}
message Request_ProductID{
	int64 id = 1;
}
message Response_DelProduct{
	string message = 1;
}
message Response_ProductInfos{
	repeated Response_ProductInfo infos = 1;
}